--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "browser-sync": "^2.23.6",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^5.0.0",
-    "gulp-sass": "^3.2.1"
+    "gulp-sass": "^3.2.1",
+    "gulp-sourcemaps": "^2.6.4"
   }
 }
